2006-08-21  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* lily/lyric-extender.cc (print): support left/right-padding for
	extenders.

	* scm/documentation-generate.scm (string-append): revert lilypond/
	path, doc why.

2006-08-20  Graham Percival  <gpermus@gmail.com>

	* Documentation/user/lilypond.tely: clarification to
	license presentation (not to actual license).

	* Documentation/user/basic-notation.itely,
	instrument-notation.itely: minor changes.

	* input/ {regression, test}/+.ly: clarification to
	text (you can click on examples).  Thanks, Mats!

	* input/manual/bar-lines.ly: adds ||: repeats.

2006-08-20  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* make/ly-vars.make (OMF_FILES): strip ps.gz from OMF_FILES 

	* scm/documentation-lib.scm (texi-file-head): category LilyPond.

	* Documentation/user/lilypond.tely: strip lilypond/ from info
	links, rename to category LilyPond

	* lily/pango-font.cc (description_string): new function.

	* VERSION: release 2.9.15

	* lily/spacing-engraver.cc (stop_translation_timestep): use
	Dscho's fix for spacing spanner. 

	* scm/define-music-types.scm (music-descriptions): use
	apply-output-event for ApplyOutputEvent

	* lily/output-property-engraver.cc (listen_apply_output): rename
	from listen_layout_instruction.

	* lily/piano-pedal-engraver.cc (struct Pedal_type_info): new
	function protect()

2006-08-19  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* scm/lily.scm (lilypond-all): option read-file-list: substitute
	commandline args with contains, split by \n.

	* scripts/lilypond-book.py (Lilypond_file_snippet.my_system):
	write snippet-names file, call with -dread-file-list. Fixes
	command limitations on 64-bit systems.

	* input/regression/stencil-color-rotation.ly: new file.

	* lily/include/translator.hh (struct Acknowledge_information):
	revert: don't use Protected_scm in global objects, as GUILE can't
	handle gc_unprotect from automated destructors on MacOS X.
 